# rust-worker

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
src/: context.rs  main.rs  worker.rs
src/core/: error.rs  handler.rs  mod.rs  plugin.rs  prelude.rs  pubsub.rs
src/db/: mod.rs  models.rs
src/model/: mod.rs  plugin_config.rs  pub_sub.rs  worker_config.rs
src/plugins/: dank_memer.rs  date_transform.rs  giveaways.rs  invite_counting.rs  math_solving.rs  message_counting.rs  messagecounting.rs  mod.rs  server_indexer.rs  timers.rs  utility.rs
