[package]
name = "worker-pod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-cache-inmemory = "0.8.1"
twilight-gateway = "0.8.0"
twilight-http = "0.8.1"
twilight-model = "0.8.1"
twilight-util = "0.8.1"
twilight-standby = "0.8.0"
twilight-embed-builder = "0.8.0"
deadpool-redis = {version = "0.10.0", features = ["serde", "rt_tokio_1"]}
tokio = {version = "1.13.0", features = ["full"]}
futures = "0.3.17"
async-trait = "0.1.51"
mongodb = "2.0.1"
serde = {version = "1.0.130", features = ["derive"]}
dotenv = "0.15.0"
tracing  = "0.1.29"
config = "0.11.0"
thiserror = "1.0.22"
serde_json = "1.0.68"
tracing-subscriber = "0.3.1"
dashmap = "5.0.0"
redis = "0.21.4" # deadpool-redis has no pubsub