[package]
name = "worker-pod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-cache-inmemory = "0.10.0"
twilight-gateway = "0.10.0"
twilight-http-ratelimiting = "0.10.0"
twilight-http = "0.10.0"
twilight-model = "0.10.0"
twilight-util = "0.10.0"
twilight-standby = "0.10.0"
twilight-embed-builder = "0.10.0"
twilight-validate = "0.10.0"
lapin = "2.0.3"
tokio = {version = "1.13.0", features = ["full"]}
futures = "0.3.17"
async-trait = "0.1.51"
serde = {version = "1.0.130", features = ["derive"]}
dotenv = "0.15.0"
tracing  = "0.1.29"
config = "0.11.0"
thiserror = "1.0.22"
serde_json = "1.0.68"
tracing-subscriber = "0.3.1"
sentry = "0.25.0"
deadpool-redis = {version = "0.10.0", features = ["serde", "rt_tokio_1"]}
chrono = {version = "0.4.19", optional = true}
dashmap = {version = "5.0.0", optional = true}
mongodb = {version = "2.1.0", features=['zstd-compression'], optional = true}
bson = {version = "2.1.0", features = ["chrono-0_4"], optional = true}
meval = {version = "0.2.0", optional = true}
rand  = {version = "0.8.5", optional = true}
date_time_parser = {version = "0.1.1", optional = true }
regex = {version = "1.5.5", optional = true }
tagscript = {version = "0.1.1", optional = true}

[features]
default = ["timers"]
mongo = ["mongodb", "bson"]
giveaways = ["rand", "mongo", "chrono"]
timers = ["mongo", "chrono", "tagscript"]
date-transformer = ["date_time_parser", "regex", "chrono"]
dank-memer = ["regex", "mongo", "dashmap"]
math-solving = ["meval", "dashmap", "regex"]
invite-counting = ["mongo"]
server-indexer = ["mongo"]
utility = ["mongo", "dashmap"]
